feat: FE mail page & sync mail
